# steel_thread_on_sap

./: .clinerules  .coverage  .env.example  .fengshui_test_gaps.json  .gitignore  .pre-commit-config.yaml  .shifu_state.json  CSN_VALIDATION_RESULTS.md  CSN_VIEWER_FINAL_IMPLEMENTATION_PLAN.md  DEVELOPMENT_GUIDELINES.md  FOLDER_REORGANIZATION_PLAN.md  GIT_TAGS_AND_CHECKPOINTS_GUIDE.md  HANA_BDC_FINAL_VERIFICATION.md  HANA_CONNECTION_IMPLEMENTATION_SUMMARY.md  MODULAR_APPLICATION_ARCHITECTURE_PLAN.md  POST_FLASK_REFACTORING_PLAN.md  PROJECT_REORGANIZATION_PLAN.md  PROJECT_ROADMAP.md  PROJECT_TRACKER.md  README.md  REUSABLE_MODULE_LIBRARY_VISION.md  ROLLBACK_POINT_SQLITE_LOGGING_COMPLETE.md  SQLITE_FALLBACK_IMPLEMENTATION_PLAN.md  TABLE_STRUCTURE_ENDPOINT_PLAN.md  check_db.py  check_fk_data.py  check_journal_keys.py  check_logs.py  check_module_blueprints.py  check_supplier_data.py  cleanup.md  conftest.py  coverage.xml  create_p2p_user.py  data_mode_response.json  feature_flags.json  feng_shui_detailed.txt  feng_shui_findings.txt  feng_shui_logger_findings.json  feng_shui_logger_test.json  (+29 more)
.git-rewrite/: backup-refs  index  message  parse  raw-refs  revs
app/: app.py  requirements.txt  run_check.ps1
app_v2/: MODULE_MIGRATION_GUIDE.md  README.md
archive/: README.md  p2p_graph.db
backend/: app.py  check_schema_tables.py
core/: README.md  __init__.py
csn-investigation-archive/: CSN_HANA_CLOUD_SOLUTION.md  CSN_VIEWER_FEATURE_COMPLETE_SUMMARY.md  CSN_VIEWER_FEATURE_IMPLEMENTATION_PLAN.md  CSN_VIEWER_FEATURE_REVISED_SUMMARY.md  OPTION_2_VALIDATION_PLAN.md
(+1551 files in other folders)
