[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-thread-on-sap"
version = "0.1.0"
description = "SAP Steel Thread P2P Data Products Platform"
requires-python = ">=3.8"
dependencies = []  # Main deps in app/requirements.txt

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "core*", "tests*", "app*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.sql"]
